feat(midi): polyphonic read path — chords, per-channel voices, CC/PC, tempo markers