@@ -1,10 +1,15 @@
 package build.music.midi;
 
+import build.music.core.Chord;
+import build.music.core.ControlChange;
 import build.music.core.Note;
 import build.music.core.NoteEvent;
+import build.music.core.ProgramChange;
 import build.music.core.Rest;
+import build.music.core.Velocity;
 import build.music.pitch.Accidental;
 import build.music.pitch.NoteName;
+import build.music.pitch.Pitch;
 import build.music.pitch.SpelledPitch;
 import build.music.score.Voice;
 import build.music.time.Fraction;
@@ -18,6 +23,7 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.TreeMap;
 import javax.sound.midi.InvalidMidiDataException;
 import javax.sound.midi.MetaMessage;
 import javax.sound.midi.MidiEvent;
@@ -39,7 +45,10 @@ public final class MidiReader {
     private MidiReader() {
     }
 
-    public record MidiImport(List<Voice> voices, Tempo tempo) {
+    public record TempoMarker(long tick, Tempo tempo) {
+    }
+
+    public record MidiImport(List<Voice> voices, Tempo tempo, List<TempoMarker> tempoChanges) {
     }
 
     /**
@@ -56,27 +65,62 @@ public final class MidiReader {
         final Sequence sequence = MidiSystem.getSequence(path.toFile());
         final int resolution = sequence.getResolution(); // ticks per quarter note
 
-        Tempo tempo = Tempo.of(120);
+        // Collect all tempo markers across all tracks, sorted by tick
+        final List<TempoMarker> allTempoMarkers = new ArrayList<>();
         final List<Voice> voices = new ArrayList<>();
         int voiceIndex = 0;
 
         for (final Track track : sequence.getTracks()) {
-            // Extract tempo from any track (usually track 0)
-            final Tempo extracted = extractTempo(track);
-            if (extracted != null) {
-                tempo = extracted;
-            }
+            allTempoMarkers.addAll(extractTempoMarkers(track));
 
-            final List<NoteEvent> events = extractNoteEvents(track, resolution);
-            if (!events.isEmpty()) {
-                voices.add(Voice.of("voice-" + voiceIndex++, events));
+            final String trackName = extractTrackName(track);
+            final Map<Integer, List<NoteEvent>> byChannel = extractChannelEvents(track, resolution);
+
+            for (final Map.Entry<Integer, List<NoteEvent>> entry : byChannel.entrySet()) {
+                final int channel = entry.getKey();
+                final List<NoteEvent> events = entry.getValue();
+                if (events.isEmpty()) {
+                    continue;
+                }
+                final String name;
+                if (trackName != null && byChannel.size() == 1) {
+                    name = trackName;
+                } else if (trackName != null) {
+                    name = trackName + "-ch" + channel;
+                } else if (byChannel.size() == 1) {
+                    name = "voice-" + voiceIndex;
+                } else {
+                    name = "voice-" + voiceIndex + "-ch" + channel;
+                }
+                voices.add(Voice.of(name, events));
+                voiceIndex++;
             }
         }
 
-        return new MidiImport(Collections.unmodifiableList(voices), tempo);
+        allTempoMarkers.sort(Comparator.comparingLong(TempoMarker::tick));
+
+        final Tempo initialTempo = allTempoMarkers.isEmpty()
+            ? Tempo.of(120)
+            : allTempoMarkers.get(0).tempo();
+        final List<TempoMarker> changes = allTempoMarkers.size() > 1
+            ? Collections.unmodifiableList(allTempoMarkers.subList(1, allTempoMarkers.size()))
+            : List.of();
+
+        return new MidiImport(Collections.unmodifiableList(voices), initialTempo, changes);
     }
 
-    private static Tempo extractTempo(final Track track) {
+    private static String extractTrackName(final Track track) {
+        for (int i = 0; i < track.size(); i++) {
+            final MidiEvent event = track.get(i);
+            if (event.getMessage() instanceof MetaMessage meta && meta.getType() == 0x03) {
+                return new String(meta.getData(), java.nio.charset.StandardCharsets.UTF_8).strip();
+            }
+        }
+        return null;
+    }
+
+    private static List<TempoMarker> extractTempoMarkers(final Track track) {
+        final List<TempoMarker> markers = new ArrayList<>();
         for (int i = 0; i < track.size(); i++) {
             final MidiEvent event = track.get(i);
             if (event.getMessage() instanceof MetaMessage meta && meta.getType() == 0x51) {
@@ -84,18 +128,29 @@ public final class MidiReader {
                 if (data.length >= 3) {
                     final int micros = ((data[0] & 0xFF) << 16) | ((data[1] & 0xFF) << 8) | (data[2] & 0xFF);
                     final int bpm = 60_000_000 / micros;
-                    return Tempo.of(Math.clamp(bpm, 1, 400));
+                    markers.add(new TempoMarker(event.getTick(), Tempo.of(Math.clamp(bpm, 1, 400))));
                 }
             }
         }
-        return null;
+        return markers;
     }
 
-    private static List<NoteEvent> extractNoteEvents(final Track track, final int resolution) {
-        // Map from (channel<<8|noteNum) → tick of NOTE_ON
-        final Map<Integer, Long> noteOnTicks = new HashMap<>();
-        // Sorted list of (startTick, endTick, midiNote)
-        final List<long[]> noteSegments = new ArrayList<>();
+    // Segment kind constants for unified long[] format {tick, endTick, data1, data2, channel, kind}
+    private static final int KIND_CC = 0;
+    private static final int KIND_PC = 1;
+    private static final int KIND_NOTE = 2;
+
+    /**
+     * Returns one event list per MIDI channel that has content in this track.
+     * ControlChange and ProgramChange events are interleaved before the notes at their tick.
+     * Notes on the same channel sharing a start tick become a Chord; others become Notes.
+     * Channels are returned in ascending order via TreeMap.
+     */
+    private static Map<Integer, List<NoteEvent>> extractChannelEvents(final Track track, final int resolution) {
+        // Map from (channel<<8|noteNum) → {startTick, velocity}
+        final Map<Integer, long[]> noteOnTicks = new HashMap<>();
+        // Unified segments: {tick, endTick, data1, data2, channel, kind}
+        final List<long[]> allSegments = new ArrayList<>();
 
         for (int i = 0; i < track.size(); i++) {
             final MidiEvent event = track.get(i);
@@ -105,49 +160,97 @@ public final class MidiReader {
             if (msg instanceof ShortMessage sm) {
                 final int cmd = sm.getCommand();
                 final int channel = sm.getChannel();
-                final int noteNum = sm.getData1();
-                final int velocity = sm.getData2();
-                final int key = (channel << 8) | noteNum;
+                final int d1 = sm.getData1();
+                final int d2 = sm.getData2();
+                final int key = (channel << 8) | d1;
 
-                if (cmd == ShortMessage.NOTE_ON && velocity > 0) {
-                    noteOnTicks.put(key, tick);
-                } else if (cmd == ShortMessage.NOTE_OFF || (cmd == ShortMessage.NOTE_ON && velocity == 0)) {
-                    final Long onTick = noteOnTicks.remove(key);
-                    if (onTick != null) {
-                        noteSegments.add(new long[]{onTick, tick, noteNum});
+                if (cmd == ShortMessage.NOTE_ON && d2 > 0) {
+                    noteOnTicks.put(key, new long[]{tick, d2});
+                } else if (cmd == ShortMessage.NOTE_OFF || (cmd == ShortMessage.NOTE_ON && d2 == 0)) {
+                    final long[] onInfo = noteOnTicks.remove(key);
+                    if (onInfo != null) {
+                        allSegments.add(new long[]{onInfo[0], tick, d1, onInfo[1], channel, KIND_NOTE});
                     }
+                } else if (cmd == ShortMessage.CONTROL_CHANGE) {
+                    allSegments.add(new long[]{tick, tick, d1, d2, channel, KIND_CC});
+                } else if (cmd == ShortMessage.PROGRAM_CHANGE) {
+                    allSegments.add(new long[]{tick, tick, d1, 0, channel, KIND_PC});
                 }
             }
         }
 
-        if (noteSegments.isEmpty()) {
-            return List.of();
+        // Group segments by channel
+        final Map<Integer, List<long[]>> segsByChannel = new TreeMap<>();
+        for (final long[] seg : allSegments) {
+            segsByChannel.computeIfAbsent((int) seg[4], k -> new ArrayList<>()).add(seg);
         }
 
-        // Sort by start tick
-        noteSegments.sort(Comparator.comparingLong(a -> a[0]));
+        final Map<Integer, List<NoteEvent>> result = new TreeMap<>();
+        for (final Map.Entry<Integer, List<long[]>> entry : segsByChannel.entrySet()) {
+            result.put(entry.getKey(), buildEvents(entry.getValue(), resolution));
+        }
+        return result;
+    }
+
+    private static List<NoteEvent> buildEvents(final List<long[]> segments, final int resolution) {
+        // Sort by tick, then kind (CC=0, PC=1 before NOTE=2), then data1 for note determinism
+        segments.sort(Comparator.comparingLong((long[] a) -> a[0])
+            .thenComparingLong(a -> a[5])
+            .thenComparingLong(a -> a[2]));
 
         final List<NoteEvent> events = new ArrayList<>();
         long cursor = 0;
-
-        // Minimum gap (in ticks) to treat as a rest: 1/32 of a whole note = resolution/8
         final long minRestTicks = Math.max(1, resolution / 8);
 
-        for (final long[] seg : noteSegments) {
-            final long startTick = seg[0];
-            final long endTick = seg[1];
-            final int midiNote = (int) seg[2];
+        int i = 0;
+        while (i < segments.size()) {
+            final long tick = segments.get(i)[0];
+            final int kind = (int) segments.get(i)[5];
 
-            // Gap before this note → rest (ignore tiny articulation gaps)
-            if (startTick - cursor >= minRestTicks) {
-                final Fraction restDur = ticksToFraction(startTick - cursor, resolution);
-                events.add(Rest.of(new FractionDuration(restDur)));
+            if (kind == KIND_CC) {
+                events.add(new ControlChange((int) segments.get(i)[2], (int) segments.get(i)[3]));
+                i++;
+            } else if (kind == KIND_PC) {
+                events.add(new ProgramChange((int) segments.get(i)[2]));
+                i++;
+            } else {
+                // NOTE group: insert rest for gap, then emit Note or Chord
+                if (tick - cursor >= minRestTicks) {
+                    events.add(Rest.of(new FractionDuration(ticksToFraction(tick - cursor, resolution))));
+                }
+
+                int j = i;
+                while (j < segments.size() && segments.get(j)[0] == tick && (int) segments.get(j)[5] == KIND_NOTE) {
+                    j++;
+                }
+                final List<long[]> group = segments.subList(i, j);
+                i = j;
+
+                if (group.size() == 1) {
+                    final long[] seg = group.get(0);
+                    final Fraction dur = ticksToFraction(seg[1] - tick, resolution);
+                    final SpelledPitch pitch = midiToSpelledPitch((int) seg[2]);
+                    final Velocity vel = Velocity.of(Math.clamp((int) seg[3], 1, 127));
+                    events.add(Note.of(pitch, new FractionDuration(dur), vel,
+                        build.music.core.Articulation.NORMAL, false));
+                    cursor = seg[1];
+                } else {
+                    final List<Pitch> pitches = new ArrayList<>();
+                    long maxEnd = tick;
+                    int velSum = 0;
+                    for (final long[] seg : group) {
+                        pitches.add(midiToSpelledPitch((int) seg[2]));
+                        if (seg[1] > maxEnd) {
+                            maxEnd = seg[1];
+                        }
+                        velSum += (int) seg[3];
+                    }
+                    final Fraction dur = ticksToFraction(maxEnd - tick, resolution);
+                    final Velocity vel = Velocity.of(Math.clamp(velSum / group.size(), 1, 127));
+                    events.add(Chord.of(pitches, new FractionDuration(dur), vel));
+                    cursor = maxEnd;
+                }
             }
-
-            final Fraction noteDur = ticksToFraction(endTick - startTick, resolution);
-            final SpelledPitch pitch = midiToSpelledPitch(midiNote);
-            events.add(Note.of(pitch, new FractionDuration(noteDur)));
-            cursor = endTick;
         }
 
         return Collections.unmodifiableList(events);
